--- a/style.css
+++ b/style.css
@@ -1,56 +1,198 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
-  :root {
-    --primary: #1687a7;
-    --secondary: #276678;
-    --primary-light: #d3e0ea;
-    --primary-dark: #03506f;
-    --background: #f4f9f9;
-    --width-break: 800px;
-  }
-  
-  body {
-    font-family: "Calistoga", sans-serif;
-    text-align: center;
-    padding: 1rem;
-    background-color: var(--background);
-    
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+:root {
+  --primary: #1687a7;
+  --secondary: #276678;
+  --primary-light: #d3e0ea;
+  --primary-dark: #03506f;
+  --background: #f4f9f9;
+  --width-break: 800px;
+}
 
+body {
+  font-family: "Andada", sans-serif;
+  text-align: center;
+  color: var(--primary);
+  padding: 0 0 1rem 0;
 
+  background-color: var(--background);
+}
+a {
+  color: var(--primary-dark);
+  text-decoration: none;
+}
+span {
+  color: var(--secondary);
+}
+h1 {
+  font-size: 3rem;
+  color: white;
+  text-align: initial;
+  padding: 1rem;
+  padding-left: 2rem;
+}
+h2 {
+  font-size: 2rem;
+  padding: 2rem;
+}
+h3 {
+  color: var(--primary-dark);
+  font-size: 1.7rem;
+  padding-bottom: 1rem;
+}
+h4 {
+  padding-top: 1rem;
+  font-size: 1.5rem;
+}
+p {
+  padding: 1rem;
+  font-size: large;
+  width: 70vh;
+  margin: auto;
+}
+strong {
+  font-weight: 600;
+  cursor: pointer;
+}
+header {
+  background-image: linear-gradient(var(--primary), var(--secondary));
+  position: fixed;
+  width: 100%;
+  box-shadow: 10px 5px 5px var(--primary-dark);
+}
 
+ul {
+  padding: 0 2rem 1.5rem 0;
+  list-style: none;
+  font-size: 1.3rem;
+  text-align: end;
+}
+li {
+  display: inline;
+  padding: 1.5rem;
+  transition: 0.6s;
+}
+li:hover {
+  border-radius: 0.5rem;
+  background-color: var(--primary-light);
+  color: var(--primary-dark);
+  padding: 0.5rem;
+  transition: 0.6s;
+  box-shadow: 5px 3px 3px #03506f;
+}
 
+li > a {
+  color: white;
+  transition: 0.6s;
+}
+li > a:hover {
+  cursor: pointer;
+  color: var(--primary-dark);
+  transition: 0.6s;
+}
+main {
+  padding-top: 15%;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.source-code-btn {
+  color: #f4f9f9;
+  background-color: var(--primary-dark);
+  border: var(--secondary);
+}
+.source-code-btn:hover {
+  color: var(--primary-dark);
+  background-color: var(--background);
+}
+.bg-change {
+  background-color: var(--primary-light);
+  padding: 2rem;
+  margin-top: 2rem;
+}
+.normal-bg {
+  padding: 2rem;
+  margin-top: 2rem;
+}
 .technologies-logos {
   text-align: center;
   display: inline-flex;
-  grid-template-columns: auto;
 }
-.logo-img{
-    width: 55px;   
+.logo-img {
+  width: 55px;
+  padding: 0.3rem;
+  cursor: pointer;
 }
-.logo{
-    margin: 0.5rem;
+.logo {
+  margin: 2rem 2rem 2rem 2rem;
 }
-figcaption{
-    font-size: 1rem;
+figcaption {
+  font-size: 1rem;
+}
+small {
+  color: rgb(70, 79, 100);
+}
+button {
+  display: block;
+  margin: auto;
+  cursor: pointer;
+  margin-top: 0.7rem;
+  padding: 0.7rem;
+  font-size: large;
+  border: 2px solid;
+  border-radius: 0.5rem;
+  box-shadow: 6px 3px 3px var(--primary-dark);
+  color: var(--primary-dark);
+  background-color: white;
+  transition: 0.6s;
+}
+
+button:hover {
+  color: var(--background);
+  background-color: var(--primary-dark);
+  transition: 0.6s;
+}
+footer {
+  background-image: linear-gradient(var(--primary-light), var(--primary));
+  padding: 0.5rem;
+  margin-top: 1rem;
+  margin-bottom: -5rem;
+}
+footer > a {
+  color: var(--primary-dark);
+}
+
+@media (max-width: 420px) {
+  h1 {
+    font-size: 2rem;
+  }
+  p {
+    width: 40vh;
+  }
+  .head-img {
+    padding-top: 20%;
+    width: 300px;
     
+  }
+  .hero-img{
+    padding-top: 20%;
+    width: 20vh;
+  }
+  .technologies-logos {
+    text-align: center;
+    display: inline-flex;
+  }
+  .logo-img {
+    width: 40px;
+    padding: 0.2rem;
+    cursor: pointer;
+  }
+  .logo {
+    margin: 1.5rem 1rem 1.5rem 1rem;
+  }
+  figcaption {
+    font-size: 1rem;
+  }
 }
