--- a/style.css
+++ b/style.css
@@ -55,17 +55,19 @@ p {
   width: 70vh;
   margin: auto;
 }
+
 strong {
   font-weight: 600;
   cursor: pointer;
 }
+
 header {
   background-image: linear-gradient(var(--primary), var(--secondary));
   position: fixed;
   width: 100%;
   box-shadow: 10px 5px 5px var(--primary-dark);
 }
-
+/* navbar elements */
 ul {
   padding: 0 2rem 1.5rem 0;
   list-style: none;
@@ -95,10 +97,12 @@ li > a:hover {
   color: var(--primary-dark);
   transition: 0.6s;
 }
+/* main tag */
 main {
   padding-top: 15%;
+  
 }
-
+/* buttons */
 .source-code-btn {
   color: #f4f9f9;
   background-color: var(--primary-dark);
@@ -108,6 +112,8 @@ main {
   color: var(--primary-dark);
   background-color: var(--background);
 }
+
+/* sections */
 .bg-change {
   background-color: var(--primary-light);
   padding: 2rem;
@@ -155,6 +161,7 @@ figcaption {
 small {
   color: rgb(70, 79, 100);
 }
+/* button */
 button {
   display: block;
   margin: auto;
@@ -175,6 +182,7 @@ button:hover {
   background-color: var(--primary-dark);
   transition: 0.6s;
 }
+/* footer */
 footer {
   background-image: linear-gradient(var(--primary-light), var(--primary));
   padding: 0.5rem;
@@ -195,7 +203,7 @@ footer > a {
   opacity: 1 ;
   transform: rotateY(-2deg);
 }
-
+/* for mobile screen */
 @media (max-width: 420px) {
   h1 {
     font-size: 2rem;
